# Lakekeeper

./: CHANGELOG.md  CLAUDE.md  README.md  lakekeeper.example.yaml  pyproject.toml
demo/: RUNBOOK.md  create_nonpartitioned_table.py  create_single_partition_table.py  create_two_partitions_table.py
src/beekeeper/: cli.py  config.py
src/beekeeper/utils/: spark.py
src/lakekeeper/: __init__.py  cli.py  config.py  models.py
src/lakekeeper/core/: analyzer.py  backup.py  compactor.py
src/lakekeeper/engine/: hive_external.py
src/lakekeeper/utils/: hdfs.py  spark.py
tests/: test_compactor.py
tests/integration/: test_local_cluster.py
tests/unit/: test_analyzer.py  test_backup.py  test_cli.py  test_compactor.py  test_config.py  test_hdfs.py  test_hive_external_engine.py  test_spark_utils.py
